Fixed span spacing, changed input:focus outline

--- a/login.css
+++ b/login.css
@@ -14,7 +14,7 @@ html,body{
 .card   {
     border-style: solid;
     border-width: 1px;
-    border-radius: 12px;
+    border-radius: 4px;
     border-color: lightgrey;
     min-width: 30%;
     min-height: 20%;
@@ -33,33 +33,42 @@ form {
 input, button {
     margin: 5px;
     padding: 5px;
-    border: 0px;
+}
+
+input {
+    border: 1px solid lightgrey;
+    border-radius: 4px;
+}
+
+ input:focus {
+    outline-color: #4285F4;
 }
 
 button {
     background-color: #4285F4;
     color: white;
     border-radius: 5px;
+    border: 0px;
     margin: 0px 40px 0px 40px;
 }
 
 h1 {
     margin-bottom: -10px;
+    display: flex;
 }
 
 h3 {
     color: #202124;
-font-size: 18px;
-font-weight: 400;
-line-height: 1.3333;
-word-break: break-word;
-margin-bottom: -20px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.3333;
+    margin-bottom: -20px;
 }
 
 h5 {
-color: #202124;
-font-size: 12px;
-font-weight: 400;
-letter-spacing: 0.1px;
-line-height: 1.5;
+    color: #202124;
+    font-size: 12px;
+    font-weight: 500;
+    letter-spacing: 0.1px;
+    line-height: 1.5;
 }
